NCC/judge/USERS/sdf/error.txt
/home/blazehunter/PycharmProjects/NCCGIT/NCC/judge/USERS/sdf/1/7973.c:2:4: error: unknown type name ‘function’; did you mean ‘union’?
    function foo(items) 
    ^~~~~~~~
    union
/home/blazehunter/PycharmProjects/NCCGIT/NCC/judge/USERS/sdf/1/7973.c: In function ‘foo’:
/home/blazehunter/PycharmProjects/NCCGIT/NCC/judge/USERS/sdf/1/7973.c:2:13: warning: type of ‘items’ defaults to ‘int’ [-Wimplicit-int]
    function foo(items) 
             ^~~
/home/blazehunter/PycharmProjects/NCCGIT/NCC/judge/USERS/sdf/1/7973.c:4:2: error: unknown type name ‘var’; did you mean ‘char’?
  var x = "All this is syntax highlighted";
  ^~~
  char
/home/blazehunter/PycharmProjects/NCCGIT/NCC/judge/USERS/sdf/1/7973.c:4:10: warning: initialization makes integer from pointer without a cast [-Wint-conversion]
  var x = "All this is syntax highlighted";
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
